src/objects/invoices__x.object
<CustomObject>
    <externalDataSource>BillingService</externalDataSource>
    <externalName>invoices</externalName>
    <fields>
        <fullName>ProjectRef__c</fullName>
        <label>External ID</label>
        <length>100</length>
        <referenceTargetField>Project__c.ProjectRef__c</referenceTargetField>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>billAmount__c</fullName>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>billDate__c</fullName>
        <label>Bill Date</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceId__c</fullName>
        <label>invoiceId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>invoices</label>
    <pluralLabel>invoices</pluralLabel>
</CustomObject>